testdata/baselines/reference/compiler/tluaMultiReturnForwarding.errors.txt
tluaMultiReturnForwarding.tlua(22,26): error TS2345: Argument of type 'string | nil' is not assignable to parameter of type 'string'.
  Type 'nil' is not assignable to type 'string'.


==== tluaMultiReturnForwarding.tlua (1 errors) ====
    function pair(): (number, string)
      return 1, "a";
    end
    
    function variadic(): (number, ...string)
      return 1, "a", "b";
    end
    
    function rest(a: number, ...: string): number
      return a;
    end
    
    function takes2(a: number, b: string): boolean
      return true;
    end
    
    // A variadic tail forwards into a rest parameter.
    local restForward = rest(variadic());
    
    // An unbounded tail may produce no value for the parameter it reaches, so what
    // it passes there is `string | nil` -- which a required `string` rejects.
    local unbounded = takes2(variadic());
                             ~~~~~~~~~~
!!! error TS2345: Argument of type 'string | nil' is not assignable to parameter of type 'string'.
!!! error TS2345:   Type 'nil' is not assignable to type 'string'.
    
    // Packs forward through nested calls.
    function wrap(): (number, string)
      return pair();
    end
    
    local nested = takes2(wrap());
    
    // The tail expands inside a call used as a value list tail.
    function both(): (boolean, number)
      return takes2(pair()), 2;
    end
    